# imgextract

./: .gitignore  pyproject.toml
imgextract/: main.py
object_detection/: __init__.py  detection.py
